# cli-launcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: 设置面板方案.md  需求描述.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/components/: ConfigItem.tsx  ConfigList.tsx  Footer.tsx  Header.tsx  SettingsDialog.tsx  SortableItem.tsx
src/components/ui/: dialog.tsx  tooltip.tsx
src/services/: fileSync.ts  tauri.ts
src/stores/: useConfigStore.ts  useSettingsStore.ts  useThemeStore.ts  useUiStore.ts
src/types/: index.ts
