[package]
name = "cli-launcher"
version = "1.0.0"
description = "CliLauncher - 命令行窗口唤醒助手"
authors = ["CodingGyd"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cli_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
